--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "lucide-react": "^0.424.0",
     "mongoose": "^8.4.3",
     "next": "14.2.4",
     "next-auth": "^5.0.0-beta.19",
